--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_DOMAIN="http://localhost:3000"
+NEXT_PUBLIC_DOMAIN="https://grabit-templete.vercel.app"
 NEXT_PUBLIC_PATH=""
 NEXT_PUBLIC_URL=$NEXT_PUBLIC_DOMAIN$NEXT_PUBLIC_PATH
